Removed same project naming, added BS5, and logo images.

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Adapop",
-  "name": "Adapop",
+  "short_name": "Aurelia One",
+  "name": "Aurelia One",
   "version": "__BUILD_VERSION__",
   "icons": [
     {
