--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: "3.7"
 
 services:
-  adapop-webapp:
-    image: adapop-webapp:0.1.0
+  aurelia-one:
+    image: aurelia-one:0.1.0
     build:
-      context: adapop-webapp # relative to docker-compose.yml
+      context: aurelia-one # relative to docker-compose.yml
       dockerfile: Dockerfile
     ports:
       - "5050:80"
