--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "declaration": false,
     "types": [
       "node",
-      "jest"
+      "jest",
+      "jquery"
     ],
     "typeRoots": [
       "./node_modules/@types"
